{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 12,
  "lineage": "e85c81ec-2fc9-ddcf-4064-a1f378a94ee7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "imported_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713187727:vpc/vpc-04f15e6f778a69fe3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.0.0.0/24",
            "default_network_acl_id": "acl-07cbce156f612019f",
            "default_route_table_id": "rtb-0c588ef0805f6d9ac",
            "default_security_group_id": "sg-0f3798844093d7bac",
            "dhcp_options_id": "dopt-09cd5f3382f696b6f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04f15e6f778a69fe3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c588ef0805f6d9ac",
            "owner_id": "339713187727",
            "tags": {
              "Name": "test_vpc"
            },
            "tags_all": {
              "Name": "test_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nat",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0575300b99cb7ed59",
            "arn": "arn:aws:ec2:us-east-1:339713187727:elastic-ip/eipalloc-0575300b99cb7ed59",
            "association_id": "eipassoc-0795502fb268a2c64",
            "domain": "vpc",
            "id": "eipalloc-0575300b99cb7ed59",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d009cf554f9f051c",
            "private_dns": "ip-10-0-0-215.ec2.internal",
            "private_ip": "10.0.0.215",
            "public_dns": "ec2-100-29-30-108.compute-1.amazonaws.com",
            "public_ip": "100.29.30.108",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-gateway"
            },
            "tags_all": {
              "Name": "nat-gateway"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "igw",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713187727:internet-gateway/igw-028f78dd16dc4eca7",
            "id": "igw-028f78dd16dc4eca7",
            "owner_id": "339713187727",
            "tags": {
              "Name": "internet-gateway"
            },
            "tags_all": {
              "Name": "internet-gateway"
            },
            "vpc_id": "vpc-04d96a01d84843ca9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nat",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0575300b99cb7ed59",
            "association_id": "eipassoc-0795502fb268a2c64",
            "connectivity_type": "public",
            "id": "nat-0c2389b232c4c38e8",
            "network_interface_id": "eni-0d009cf554f9f051c",
            "private_ip": "10.0.0.215",
            "public_ip": "100.29.30.108",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-024eac73baab8691d",
            "tags": {
              "Name": "nat-gateway"
            },
            "tags_all": {
              "Name": "nat-gateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_subnet.my_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "my_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rt_pub",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-028f78dd16dc4eca7",
            "id": "r-rtb-0b540f9792c09608d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b540f9792c09608d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_route_table.my_route_table",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rt_pub",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713187727:route-table/rtb-0b540f9792c09608d",
            "id": "rtb-0b540f9792c09608d",
            "owner_id": "339713187727",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-028f78dd16dc4eca7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d96a01d84843ca9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713187727:security-group/sg-075bdd9d27a616a4f",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-075bdd9d27a616a4f",
            "ingress": [],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "339713187727",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sg"
            },
            "tags_all": {
              "Name": "web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d96a01d84843ca9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sub_pri",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713187727:subnet/subnet-02a2656d752ce7dbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a2656d752ce7dbb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713187727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-04d96a01d84843ca9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": "sub_pub",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713187727:subnet/subnet-024eac73baab8691d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024eac73baab8691d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713187727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-04d96a01d84843ca9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713187727:vpc/vpc-04d96a01d84843ca9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f452c9d52fb63d97",
            "default_route_table_id": "rtb-0331c38c29604ac27",
            "default_security_group_id": "sg-0530580fd658f49c6",
            "dhcp_options_id": "dopt-09cd5f3382f696b6f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04d96a01d84843ca9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0331c38c29604ac27",
            "owner_id": "339713187727",
            "tags": {
              "Environment": "production",
              "Name": "vpc"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "vpc"
            }
          }
        }
      ]
    }
  ]
}